<resources>
    <!-- GENERAL ================================================================================-->
    <!--Nom de l'application et noms des fenêtres et fragments-->
    <string name="app_name">Phonetection</string>
    <string name="title_activity_detection_mode_chooser">Phonetection</string>
    <string name="title_activity_settings">Settings</string>

    <!-- NOTIFICATIONS ==========================================================================-->
    <string name="notification_charger_mode">Get access to detection modes</string>

    <!-- MENUS ==================================================================================-->
    <!--Noms des options de menu-->
    <string name="action_settings">Settings</string>
    <string name="action_info">Informations</string>
    <string name="action_mode_selector">Detection modes</string>
    <!-- BOUTONS ================================================================================-->
    <!--Boutons d'activation/désactivation de mode-->
    <string name="activate_button">Activate</string>
    <string name="deactivate_button">Deactivate</string>

    <!--Boutons de saisie de code ou de schéma-->
    <string name="clear_button">Clear</string>
    <string name="validate_button">OK</string>
    <string name="confirm_button">Confirm</string>
    <string name="skip_button">Skip</string>

    <!--Boutons de confiramation ou d'annulation-->
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>

    <!--Boutons de saisie de code-->
    <string name="pin_0_button">0</string>
    <string name="pin_1_button">1</string>
    <string name="pin_2_button">2</string>
    <string name="pin_3_button">3</string>
    <string name="pin_4_button">4</string>
    <string name="pin_5_button">5</string>
    <string name="pin_6_button">6</string>
    <string name="pin_7_button">7</string>
    <string name="pin_8_button">8</string>
    <string name="pin_9_button">9</string>

    <!-- MODES DE DETECTIONS ====================================================================-->
    <!--Nom des différents modes de détection-->
    <string name="charger_detection_mode">Charger detection mode</string>
    <string name="motion_detection_mode">Motion detection mode</string>
    <string name="sim_detection_mode">SIM detection mode</string>
    <string name="sms_detection_mode">SMS detection mode</string>

    <!--Description des différents modes de détection-->
    <string name="charger_detection_mode_description">
        Start the alarm when the charger is disconnected
    </string>
    <string name="motion_detection_mode_description">
        Start the alarm when the device is moved
    </string>
    <string name="sim_detection_mode_description">
        Start the alarm when the SIM card is changed
    </string>
    <string name="sms_detection_mode_description">
        Start the alarm when receiving an SMS
    </string>

    <!-- PARAMETRES =============================================================================-->
    <!--Noms des sections de paramètres-->
    <string name="alarm_and_grace_time_section">Alarm and grace time</string>
    <string name="security_section">Security</string>

    <!--Noms des paramètres-->
    <string name="light_alarm_setting">Light alarm</string>
    <string name="grace_time_setting">Grace time</string>
    <string name="sms_setting">Alarm control text message</string>
    <string name="security_level_setting">Security level</string>
    <string name="pin_setting">Pin</string>
    <string name="pattern_setting">Pattern</string>
    <string name="image_setting">Image</string>

    <!--Description des paramètres-->
    <string name="sms_settings_description">The alarm will start every time you will receive this text message</string>
    <string name="light_alarm_setting_description">To get a more deterrent effect</string>
    <string name="grace_time_setting_description">Time before alarm start</string>
    <string name="security_level_setting_description">Number of steps to unlock the application</string>

    <!--Titre des dialogues de changement de paramètre-->
    <string name="new_pin_choice">Choose a new pin</string>
    <string name="new_pin_confirm">Confirm your new pin</string>
    <string name="new_pattern_choice">Draw a new pattern</string>
    <string name="new_pattern_confirm">Confirm your new pattern</string>
    <string name="new_image_choice">Choose a new image</string>
    <string name="new_image_confirm">Confirm your new image</string>

    <!--Option des paramètres-->
    <string name="grace_time_5_seconds">5 seconds</string>
    <string name="grace_time_10_seconds">10 seconds</string>
    <string name="grace_time_15_seconds">15 seconds</string>
    <string name="grace_time_30_seconds">30 seconds</string>
    <string name="security_level_low">Low (1 step)</string>
    <string name="security_level_medium">Medium (2 steps)</string>
    <string name="security_level_high">High (3 steps)</string>
    <string name="pin_not_set">Pin not set</string>
    <string name="pattern_not_set">Pattern not set</string>
    <string name="image_not_set">Image not set</string>


    <!--Clefs des paramètres (entrées) -->
    <string name="pref_key_motion_mode">pref_key_motion_mode</string>
    <string name="pref_key_cable_mode">pref_key_cable_mode</string>
    <string name="pref_key_sim_mode">pref_key_sim_mode</string>
    <string name="pref_key_sms_mode">pref_key_sms_mode</string>
    <string name="pref_key_light_alarm">pref_key_light_alarm</string>
    <string name="pref_key_grace_time">pref_key_grace_time</string>
    <string name="pref_key_security_level">pref_key_security_level</string>
    <string name="pref_key_pin">pref_key_pin</string>
    <string name="pref_key_pattern">pref_key_pattern</string>
    <string name="pref_key_image">pref_key_image</string>
    <string name="pref_key_sms">pref_key_sms</string>

    <!--Valeurs des paramètres (values) -->
    <bool name="pref_motion_mode_default">false</bool>
    <bool name="pref_cable_mode_default">false</bool>
    <bool name="pref_sim_mode_default">false</bool>
    <bool name="pref_sms_mode_default">false</bool>
    <bool name="pref_light_alarm_default">true</bool>
    <integer name="pref_grace_time_default">5000</integer>
    <integer name="pref_grace_time_5">5000</integer>
    <integer name="pref_grace_time_10">10000</integer>
    <integer name="pref_grace_time_15">15000</integer>
    <integer name="pref_grace_time_30">30000</integer>
    <string name="pref_security_level_low">Low</string>
    <string name="pref_security_level_medium">Medium</string>
    <string name="pref_security_level_high">High</string>
    <string name="pref_security_level_default">Low</string>
    <string name="pref_pin_default">null</string>
    <integer name="pref_pattern_default">-1</integer>
    <string name="pref_image_default">null</string>
    <string name="pref_sms_default">PHONETECTION</string>

    <!-- DIALOGUES ==============================================================================-->
    <!--Noms des dialogues-->
    <string name="dissuasive_dialog">Beware !</string>
    <string name="info_dialog">Infos</string>
    <string name="enter_pin_dialog">Enter your pin</string>
    <string name="draw_pattern_dialog">Draw your pattern</string>
    <string name="select_image_dialog">Select your image</string>
    <string name="different_pin_dialog">Wrong PIN</string>
    <string name="pin_saved_dialog">New PIN saved</string>
    <string name="different_pattern_dialog">Wrong pattern</string>
    <string name="pattern_saved_dialog">New pattern saved</string>
    <string name="different_image_dialog">Wrong image</string>
    <string name="image_saved_dialog">New image saved</string>

    <!--Messages des dialogues-->
    <string name="dissuasive_dialog_message">
        This phone is protected by an alarm.
        You will have to unlock the device at the end of this message.
    </string>
    <string name="info_dialog_message">
        Phonetection has been created by Manon Paquereau and Dimitri Drouet for a school project.
        The purpose of this application is to protect your device from robbery.
        You can choose several modes of detection.
    </string>
    <string name="different_pin_dialog_message">You enter two different PIN</string>
    <string name="pin_saved_dialog_message">The PIN you entered, has been saved</string>
    <string name="different_pattern_dialog_message">You draw two different patterns</string>
    <string name="pattern_saved_dialog_message">The pattern you drew, has been saved</string>
    <string name="different_image_dialog_message">You choose two different images</string>
    <string name="image_saved_dialog_message">The image you have chosen, has been saved</string>
</resources>
