<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/alarm_and_grace_time_section">
        <SwitchPreference
            android:id="@+id/pref_light_alarm"
            android:key="@string/pref_key_light_alarm"
            android:title="@string/light_alarm_setting"
            android:icon="@drawable/ic_wb_iridescent_black_36dp"
            android:summary="@string/light_alarm_setting_description"
            android:defaultValue="@bool/pref_light_alarm_default"/>
        <preferences.GraceTimePreference
            android:id="@+id/pref_grace_time"
            android:key="@string/pref_key_grace_time"
            android:title="@string/grace_time_setting"
            android:icon="@drawable/ic_timer_black_36dp"
            android:dialogTitle="@string/grace_time_setting"
            android:dialogIcon="@drawable/ic_timer_black_36dp"
            android:defaultValue="@integer/pref_grace_time_default"/>
        <EditTextPreference
            android:id="@+id/pref_sms"
            android:key="@string/pref_key_sms"
            android:title="@string/sms_setting"
            android:icon="@drawable/ic_textsms_black_36dp"
            android:dialogTitle="@string/sms_setting"
            android:defaultValue="@string/pref_sms_default"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/security_section">
        <preferences.SecurityLevelPreference
            android:id="@+id/pref_security_level"
            android:key="@string/pref_key_security_level"
            android:title="@string/security_level_setting"
            android:icon="@drawable/ic_security_black_36dp"
            android:dialogTitle="@string/security_level_setting"
            android:dialogIcon="@drawable/ic_security_black_36dp"
            android:defaultValue="@string/pref_security_level_default"/>
        <preferences.PinPreference
            android:id="@+id/pref_pin"
            android:key="@string/pref_key_pin"
            android:title="@string/pin_setting"
            android:icon="@drawable/ic_dialpad_black_36dp"
            android:dialogTitle="@string/pin_setting"
            android:dialogIcon="@drawable/ic_dialpad_black_36dp"
            android:defaultValue="@string/pref_pin_default"/>
        <preferences.PatternPreference
            android:id="@+id/pref_pattern"
            android:key="@string/pref_key_pattern"
            android:title="@string/pattern_setting"
            android:icon="@drawable/ic_apps_black_36dp"
            android:dialogTitle="@string/pattern_setting"
            android:dialogIcon="@drawable/ic_apps_black_36dp"
            android:defaultValue="@integer/pref_pattern_default"/>
        <preferences.ImagePreference
            android:id="@+id/pref_image"
            android:key="pref_image"
            android:title="@string/image_setting"
            android:icon="@drawable/ic_collections_black_36dp"
            android:dialogTitle="@string/image_setting"
            android:dialogIcon="@drawable/ic_collections_black_36dp"
            android:defaultValue="@string/pref_image_default"/>
    </PreferenceCategory>
</PreferenceScreen>