<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="@dimen/pin_text_size"
            android:textColor="@color/accent"
            android:id="@+id/pin_password" />

    </LinearLayout>

    <View
        style="@style/dialog_separator"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                style="@style/pin_button"
                android:text="@string/pin_1_button"
                android:id="@+id/pin_1_button" />
            <Button
                style="@style/pin_button"
                android:text="@string/pin_2_button"
                android:id="@+id/pin_2_button" />
            <Button
                style="@style/pin_button"
                android:text="@string/pin_3_button"
                android:id="@+id/pin_3_button" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                style="@style/pin_button"
                android:text="@string/pin_4_button"
                android:id="@+id/pin_4_button" />
            <Button
                style="@style/pin_button"
                android:text="@string/pin_5_button"
                android:id="@+id/pin_5_button" />
            <Button
                style="@style/pin_button"
                android:text="@string/pin_6_button"
                android:id="@+id/pin_6_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                style="@style/pin_button"
                android:text="@string/pin_7_button"
                android:id="@+id/pin_7_button" />
            <Button
                style="@style/pin_button"
                android:text="@string/pin_8_button"
                android:id="@+id/pin_8_button" />
            <Button
                style="@style/pin_button"
                android:text="@string/pin_9_button"
                android:id="@+id/pin_9_button" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <View
                style="@style/pin_button"/>

            <Button
                style="@style/pin_button"
                android:text="@string/pin_0_button"
                android:id="@+id/pin_0_button" />

            <View
                style="@style/pin_button"/>

        </LinearLayout>

    </LinearLayout>

    <View
        style="@style/dialog_separator"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start">

            <Button
                style="@style/dialog_button"
                android:id="@+id/pin_clear_button" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="end"
            android:layout_weight="1">

            <Button
                style="@style/dialog_button"
                android:text="@string/cancel_button"
                android:id="@+id/pin_cancel_button"/>

            <Button
                style="@style/dialog_button"
                android:id="@+id/pin_validate_button" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>