<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin">

        <TextView
            style="@style/dialog_description"
            android:id="@+id/security_level_description"
            android:text="@string/security_level_setting_description" />


    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin">

        <RadioButton
            style="@style/radio_button"
            android:text="@string/security_level_low"
            android:id="@+id/security_level_low"/>

        <RadioButton
            style="@style/radio_button"
            android:text="@string/security_level_medium"
            android:id="@+id/security_level_medium" />

        <RadioButton
            style="@style/radio_button"
            android:text="@string/security_level_high"
            android:id="@+id/security_level_high"/>
    </RadioGroup>

</LinearLayout>